@@ -76,6 +76,7 @@ use constant {
         'ETtoday星光雲',
         'TVBS新聞網',
         '台灣時報 | 電子報',
+        '大紀元',
     ],
 
     CATEGORY_NAMES => [
